[gd_scene load_steps=3 format=3 uid="uid://bsugx5w81ynr7"]

[ext_resource type="Script" path="res://scene/setting/setting.gd" id="1_ri574"]
[ext_resource type="Texture2D" uid="uid://boa822pn1fgys" path="res://assets/Inventory/Inventory_background.png" id="2_uoic6"]

[node name="setting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ri574")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -136.0
offset_right = 224.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uoic6")
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="MusicSlider" type="HSlider" parent="Panel/NinePatchRect"]
layout_mode = 0
offset_left = 72.0
offset_top = 85.0
offset_right = 184.0
offset_bottom = 101.0

[node name="SFXSlider" type="HSlider" parent="Panel/NinePatchRect"]
layout_mode = 0
offset_left = 72.0
offset_top = 125.0
offset_right = 184.0
offset_bottom = 141.0

[node name="time_label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -99.0
offset_right = 192.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.760784, 0.533333, 0.368627, 1)
text = "2024"

[connection signal="value_changed" from="Panel/NinePatchRect/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Panel/NinePatchRect/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
